<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_nav_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jason@todo.todo">jason</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>a_star</depend>
  <depend>path2waypoint</depend>
  <depend>fast_lio</depend>
  <depend>livox_ros_driver2</depend>
  <depend>local_planner</depend>
  <depend>terrain_analysis</depend>
  <depend>terrain_analysis_ext</depend>
  <depend>sensor_scan_generation</depend>
  <depend>loam_interface</depend>
  <depend>vehicle_simulator</depend>
  <depend>mapping</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
