<package format="3">
  <name>mapping</name>
  <version>0.0.1</version>
  <description>mapping launch</description>
  <maintainer email="laijinbiao00@gmail.com">Jason Lai</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
